week02/giwoong/backend/LoginStudy/src/main/java/com/example/loginstudy/global/error/exception/NotFoundGroupException.java
package com.example.loginstudy.global.error.exception;

public abstract class NotFoundGroupException extends RuntimeException{
    public NotFoundGroupException(String message) {
        super(message);
    }
}
